tests/errors/immutable_assign.lx
@module "main"

pub const main -> fn () int {
    const x: int = 5;
    x = 10;
    return 0;
}
